- TBD
- [v0.1.0](#v010)

## TBD

- Add Unit and Integration tests for placeholder classes

## v0.1.0

- Initial pre-version release
- Updated Readme
- Added Ubuntu, Fedora, GCC15, Windows, Clang-Windows Builds and badges
- Added placeholder classes `Market`, `Stock`, `LimitOrder`, `OrderBook`
- Implemented rudimentary compiling options including variable building with cmake
- Added Code Coverage
- Added basic testing as Proof-of-Concept
- Wrote README, LICENSE, CHANGELOG